Time: 25 ms (95.65%) | Memory: 51.1 MB (85.62%) - LeetSync